--- a/TD 1 HTML/style.css
+++ b/TD 1 HTML/style.css
@@ -6,7 +6,7 @@ div.style1 {
 
 div.style2 {
     background-color: yellow;
-    height: 200px;
+    height: 700px;
     
 }
 
@@ -14,4 +14,10 @@ div.style3 {
     background-color:rgb(154, 240, 26);
     height: 20px;
     
+}
+
+div.menu {
+    background-color: palevioletred;
+    height: 700px;
+    widht: 50px;
 }
