--- a/TD 1 HTML/style.css
+++ b/TD 1 HTML/style.css
@@ -1,42 +1,35 @@
 div.style1 {
     background-color: lightskyblue;
-    height: 20px;
+    height: 30px;
     width: 1500px;
 
 }
 
 div.style2 {
     background-color: yellow;
-    height: 700px;
+    height: 825px;
     width: 1500px;
     z-index: 1;
     position: absolute;
     
 }
 
-div.style3 {
-    background-color:rgb(154, 240, 26);
-    height: 20px;
-    position: absolute, bottom;
-    width: 1500px;
-    z-index: 2;
-}
-
 div.menuhaut {
     background-color: green;
-    height: 350px;
+    height: 475px;
     width: 50px;
     z-index: 1;
     position: absolute;
+    top: 0px
 }
 
 div.menubas {
     background-color: plum;
-    height: 350px;
+    height: 475px;
     width: 50px;
     z-index: 1;
     position: absolute;
-    top: 370px;
+    top: 350px;
 }
 
 div.blocknews {
@@ -44,7 +37,16 @@ div.blocknews {
     height: 200px;
     width: 150px;
     position: absolute;
-    left: 1300px;
-    top: 30px;
+    left: 1358px;
+    top: 38px;
     z-index: 1;
 } 
+
+div.style3 {
+    background-color:rgb(154, 240, 26);
+    height: 20px;
+    position: absolute;
+    bottom: 0px;
+    width: 1500px;
+    z-index: 2;
+}
