--- a/CV en anglais/CvEnAnglais.css
+++ b/CV en anglais/CvEnAnglais.css
@@ -1,25 +1,43 @@
 div.Titre {
     font-style: italic;
     text-decoration: underline black;
-    font-size: xx-large;
+    font-size: 49px;
     font-weight: bold;
+    background-color: rgb(90, 90, 245);
+    text-align: center;
 }
 
 div.Texte {
     font-weight: 100;
-    font-size: x-large;
+    font-size: 26px;
     margin-left: 31px;
+    text-align: center;
 }
 
 div.Titre2 {
     text-decoration: underline black;
     font-weight: bold;
-    font-size: x-large;
+    font-size: 34px;
     margin-left: 9px;
+    text-align: center;
 }
 
 div.infoperso {
     font-weight: 100;
-    font-size: x-large;
+    font-size: 27px;
     margin-left: 3px;
+}
+
+body {
+
+}
+
+
+div.marge {
+    background-color: green;
+    height: 475px;
+    width: 50px;
+    z-index: 1;
+    position: absolute;
+    top: 0px
 }
